--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
     <body>
         <h1>This is a header</h1>
         <p>This is a paragraph</p>
-        <p>This is another paragraph</p>
-        <p>Hellow World</p>
+        <p>This is another paragraph.</p>
     </body>
 </html>
